Fix icon padding and alignment

--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -66,9 +66,9 @@ body
   &.pure-button-rounded
     border none
     i
-      width 45px
-      height 45px
-      border-radius 45px
+      width 44px
+      height 44px
+      border-radius 44px
       line-height 50px
       text-align center
       font-size 20px
@@ -273,6 +273,8 @@ section#signup
     top -80px
     left 50%
     transform translate(-50%, 0)
+    i
+      line-height 52px
 
 .profile
   text-align center
